2005-05-10  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* configure.ac: Added Spanish "es" to ALL_LINGUAS

Tue May 10 16:11:10 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* doc/flat.html doc/index.html: added a pointer to the documentation
	  in french.

2005-05-10  Sebastien Bacher  <seb128@debian.org>

	* admin-tool/sabayon-xinitrc.sh.in: fix a syntax error.

2005-05-09  Sebastien Bacher  <seb128@debian.org>

	* admin-tool/profilesdialog.py: use shutil.move instead of os.rename,
	fix the issue when /tmp and /etc are on different partitions.

2005-05-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/util.py: import errno module

2005-05-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/util.py:
	(uninterruptible_spawnv): actually call
	uninterruptible_spawnve() rather than os.spawnv

2005-05-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/usermod.py: don't import errno.
	
	* lib/util.py:
	(uninterruptible_spawnve): if env is None, call
	os.spawnv() since os.spawnve() seems to dislike
	when env is None.

2005-05-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/usermod.py: move _uninterruptible_spawn() to ..

	* lib/util.py:
	(uninterruptible_spawnv),
	(uninterruptible_spawnve): ... here
	
	* admin-tool/profilesdialog.py,
	  lib/protosession.py: use uninterruptible variant
	of os.spawnv() here too.

2005-05-09  Mark McLoughlin  <markmc@redhat.com>

	Fix hang when exiting the prototype session on Ubuntu.

	Problem turned out to be that os.spawn() doesn't handle
	EINTR from waitpid() on Linux:
	  http://sourceforge.net/tracker/?group_id=5470&atid=105470&func=detail&aid=686667

	Thanks to Sebastien Bacher <seb128@debian.org> for help
	in tracking the problem down. Bug #303034.

	* lib/usermod.py:
	(_uninterruptible_spawn): ignore EINTR from os.spawn()
	(set_shell), (set_homedir): use _uninterruptible_spawn()

	* lib/protosession.py:
	(ProtoSession.__session_child_watch_handler): emit the
	"finished" signal before anything else so that we