@@ -1,3 +1,12 @@
+2005-05-12  Mark McLoughlin  <markmc@redhat.com>
+
+	* admin-tool/sabayon.glade: move the New/Delete
+	buttons to under the profiles list and rename
+	them to Add/Remove.
+	
+	* admin-tool/profilesdialog.py: new/delete to
+	add/remove renaming.
+
 2005-05-10  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* configure.ac: Added Spanish "es" to ALL_LINGUAS
